# gamedev

./: .gitignore  EVENT_MANAGER_PROJECT_CLASS DIAGRAM.drawio  Untitled Diagram.drawio
correct_design_of_simple_drawing_sfml/: correct_design_of_simple_drawing_sfml.sln
correct_design_of_simple_drawing_sfml/correct_design_of_simple_drawing_sfml/: correct_design_of_simple_drawing_sfml.vcxproj  correct_design_of_simple_drawing_sfml.vcxproj.filters  game.cpp  game.h  main.cpp  window.cpp  window.h
event_manager_sfml/: event_manager_sfml.sln
event_manager_sfml/event_manager_sfml/: EventManager.cpp  EventManager.h  event_manager_sfml.vcxproj  event_manager_sfml.vcxproj.filters  game.cpp  game.h  keys.cfg  window.cpp  window.h
hello_sfml/: hello_sfml.sln
hello_sfml/hello_sfml/: hello_sfml.vcxproj  main.cpp
lines/: CMakeLists.txt
lines/src/: game.cpp  game.hpp  main.cpp  window.cpp  window.hpp
simple_drawing_sfml/: simple_drawing_sfml.sln
simple_drawing_sfml/simple_drawing_sfml/: simple_drawing_sfml.vcxproj  simple_drawing_sfml.vcxproj.filters
snake_cmake_sfml_stateANDeventManagment/: CMakeLists.txt
snake_cmake_sfml_stateANDeventManagment/snake_cmake_sfml_stateANDeventManagment/: CMakeLists.txt
snake_cmake_sfml_stateANDeventManagment/snake_cmake_sfml_stateANDeventManagment/src/: BaseState.h  EventManager.cpp  EventManager.h  GameState.cpp  GameState.h  IntroState.cpp  IntroState.h  MainMenuState.cpp  MainMenuState.h  PausedState.cpp  PausedState.h  ScoreState.cpp  ScoreState.h  Snake.h  StateManager.cpp  StateManager.h  Textbox.h  game.cpp  game.h  keys.cfg  main.cpp  score_table.data  snake.cpp  textbox.cpp  window.cpp  window.h  world.cpp  world.h
snake_game/: snake_game.sln
snake_game/snake_game/: snake_game.vcxproj  snake_game.vcxproj.filters
snake_game/snake_game/src/: Snake.h  (+8 more)
state_managment_sfml_cmake/: CMakeLists.txt
state_managment_sfml_cmake/state_managment_sfml_cmake/: CMakeLists.txt  main.cpp
state_managment_sfml_cmake/state_managment_sfml_cmake/include/: BaseState.h  EventManager.h  GameState.h  IntroState.h  MainMenuState.h  PausedState.h  StateManager.h  game.h
state_managment_sfml_cmake/state_managment_sfml_cmake/lib/: EventManager.cpp  GameState.cpp  IntroState.cpp  MainMenuState.cpp  PausedState.cpp  StateManager.cpp  game.cpp  window.cpp
state_managment_sfml_cmake/state_managment_sfml_cmake/resources/: keys.cfg
state_managment_sfml_cmake/state_managment_sfml_cmake/src/: keys.cfg  main.cpp
tictactoe_game/: tictactoe_game.sln
(+9 files in other folders)
