# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
#
cmake_minimum_required (VERSION 3.8)

project ("state_managment_sfml_cmake")

# SET(CMAKE_CXX_FLAGS "-O0")
# SET(CMAKE_C_FLAGS "-O0")

# Include sub-projects.
add_subdirectory ("state_managment_sfml_cmake")
